[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/StartScreen.tres" type="Theme" id=1]
[ext_resource path="res://Entities/Interface/StartScreen/StartingScreen.gd" type="Script" id=2]
[ext_resource path="res://Entities/Interface/StartScreen/Nickname.tscn" type="PackedScene" id=3]

[node name="StartingScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NicknameForm" parent="." instance=ExtResource( 3 )]

[node name="ErrorMessage" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -32.0
margin_right = -111.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Error"
resizable = true

[node name="ScrollContainer" type="ScrollContainer" parent="ErrorMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorLabel" type="Label" parent="ErrorMessage/ScrollContainer"]
margin_right = 289.0
margin_bottom = 127.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

